# Defender-2023

./: .gitignore  CMakeLists.txt  README.md
game-source-code/: CollisionsDetector.cpp  CollisionsDetector.h  DataBase.cpp  DataBase.h  DrawObjects.cpp  DrawObjects.h  EndGame.cpp  EndGame.h  Enemy.cpp  Enemy.h  EnemyContainer.cpp  EnemyContainer.h  Exit.cpp  Exit.h  FileHandler.cpp  FileHandler.h  Fuel.cpp  Fuel.h  FuelTanks.cpp  FuelTanks.h  Game.cpp  Game.h  GameBase.cpp  GameBase.h  GameEngine.cpp  GameEngine.h  GameObject.cpp  GameObject.h  GameObjectsContainer.cpp  GameObjectsContainer.h  GameStates.h  Help.cpp  Help.h  Humanoid.cpp  Humanoid.h  Humanoids.cpp  Humanoids.h  InputHandler.cpp  InputHandler.h  Lander.cpp  (+33 more)
game-source-code/resources/: HelpTexts.txt  HelpTextsPositions.txt
test-source-code/: test.cpp
